--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "bicirouter",
+  "name": "silio",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "./",
+  "homepage": "./",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-image-gallery": "^0.8.12",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "client": "react-scripts start",
   },
   "eslintConfig": {
     "extends": "react-app"
